--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -52,6 +52,9 @@ section:nth-child(4) {
 section:nth-child(5) {
   background-color: #000000;
 }
+section:nth-child(6) {
+  background-color: #000000;
+}
 
 /* Responsív stílusok */
 @media (max-width: 768px) {
